# ionos-ddns

./: .gitignore  APKBUILD  BUILDING.md  Dockerfile.alpine  Makefile  README.md  dns.json.example  docker-build-alpine.sh  ionos-ddns-setup-cron  ionos-ddns.post-install  ionos_ddns.py  pyproject.toml  pytest.ini  requirements.txt  snyk-test-results.txt
debian/: changelog  control  install  postinst  rules
tests/: README.md  __init__.py  conftest.py  test_dns_updater.py  test_integration.py  test_ionos_client.py  test_public_ip_detector.py
